deploy/parsers/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vkparser-test-service
  namespace: parsers
  labels:
    app: vkparser-test
spec:
  selector:
    app: vkparser-test
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
